feat: externalize Swagger configuration using SwaggerProperties
- Added `SwaggerProperties` for managing Swagger metadata and server configurations.
- Updated `SwaggerConfig` to utilize `SwaggerProperties` for dynamic API documentation setup.
- Extended `application.yml` and `application-dev.yml` for Swagger-related configurations.
- Introduced security schemes for session and CSRF protection.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -78,3 +78,7 @@ app:
       - https://dev.tradingpt.shop
       - http://localhost:3000
       - http://localhost:5173
+  swagger:
+    servers:
+      - url: https://dev.tradingpt.shop
+        description: Dev API 서버
